added gui folder for the test

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -36,6 +36,11 @@ IF (BUILD_INTERACTION_TESTING)
   SUBDIRS(Interaction)
 ENDIF (BUILD_INTERACTION_TESTING)
 
+OPTION(BUILD_GUI_TESTING "Enable building of testing for GUI classes" ON)
+IF (BUILD_GUI_TESTING)
+  SUBDIRS(Gui)
+ENDIF (BUILD_GUI_TESTING)
+
 # wxWidgets specific classes
 IF (MAF_USE_WX)
 ENDIF (MAF_USE_WX)
