plug test in cmake

--- a/Testing/Interaction/CMakeLists.txt
+++ b/Testing/Interaction/CMakeLists.txt
@@ -2,6 +2,7 @@ PROJECT (mafInteraction_TEST)
 
 LINK_LIBRARIES(medInteraction)
 LINK_LIBRARIES(medVME)
+LINK_LIBRARIES(medViews)
 LINK_LIBRARIES(medCommon)
 
 #-----------------------------------------------------------------------------
@@ -15,6 +16,10 @@ ADD_TEST(mafGizmoROI_BESTest ${EXECUTABLE_OUTPUT_PATH}/mafGizmoROI_BESTest)
 ############ medGizmoPolylineGraphTest
 ADD_EXECUTABLE(medGizmoPolylineGraphTest medGizmoPolylineGraphTest.h medGizmoPolylineGraphTest.cpp)
 ADD_TEST(medGizmoPolylineGraphTest ${EXECUTABLE_OUTPUT_PATH}/medGizmoPolylineGraphTest)
+
+############ medDeviceButtonsPadMouseDialogTest
+ADD_EXECUTABLE(medDeviceButtonsPadMouseDialogTest medDeviceButtonsPadMouseDialogTest.h medDeviceButtonsPadMouseDialogTest.cpp)
+ADD_TEST(medDeviceButtonsPadMouseDialogTest ${EXECUTABLE_OUTPUT_PATH}/medDeviceButtonsPadMouseDialogTest)
 
 IF (WIN32)
   SET_TARGET_PROPERTIES(mafGizmoROI_BESTest PROPERTIES LINK_FLAGS "/MANIFEST")
