--- a/iPose/Installer/iposeInstallerScript.nsi.in
+++ b/iPose/Installer/iposeInstallerScript.nsi.in
@@ -48,13 +48,13 @@ pop $R1
 
 ; MUI Settings
 !define MUI_ABORTWARNING
-!define MUI_ICON "@LHPBUILDER_INSTALLER_DIR_WIN@\mxl.ico"
-!define MUI_UNICON "@LHPBUILDER_INSTALLER_DIR_WIN@\mxlUninstall.ico"
+!define MUI_ICON "@IPOSE_INSTALLER_DIR_WIN@\mxl.ico"
+!define MUI_UNICON "@IPOSE_INSTALLER_DIR_WIN@\mxlUninstall.ico"
 
 ; Welcome page
 !insertmacro MUI_PAGE_WELCOME
 ; License page
-!insertmacro MUI_PAGE_LICENSE "@LHPBUILDER_INSTALLER_DIR_WIN@\mxlLicence.txt"
+!insertmacro MUI_PAGE_LICENSE "@IPOSE_INSTALLER_DIR_WIN@\mxlLicence.txt"
 ; Directory page
 !insertmacro MUI_PAGE_DIRECTORY
 ; Instfiles page
@@ -72,7 +72,7 @@ pop $R1
 ; MUI end ------
 
 Name "${PRODUCT_NAME} ${PRODUCT_VERSION}"
-OutFile "@LHPBUILDER_INSTALLER_EXECUTABLE_OUTPUT_DIR_WIN@\Setup_${PRODUCT_NAME}_@MXL_VERSION@.exe"
+OutFile "@IPOSE_INSTALLER_EXECUTABLE_OUTPUT_DIR_WIN@\Setup_${PRODUCT_NAME}_@MXL_VERSION@.exe"
 
 InstallDir "C:\b3c_software\MXL"
 InstallDirRegKey HKCU "${PRODUCT_DIR_REGKEY}" ""
@@ -113,7 +113,7 @@ Section "create product directory structure" SEC01
   SetOverwrite ifnewer
   CreateDirectory "$INSTDIR\bin"
   SetOutPath "$INSTDIR\bin"
-  File "@LHPBUILDER_EXECUTABLE_OUTPUT_PATH_WIN@\${PRODUCT_EXE_NAME}"
+  File "@IPOSE_EXECUTABLE_OUTPUT_PATH@\${PRODUCT_EXE_NAME}"
   CreateDirectory "$SMPROGRAMS\b3c_software\MXL"
   CreateShortCut "$SMPROGRAMS\b3c_software\MXL\MXL.lnk" "$INSTDIR\Bin\${PRODUCT_EXE_NAME}"
   CreateShortCut "$SMPROGRAMS\b3c_software\MXL\uninstall.lnk" "$INSTDIR\uninst.exe"
@@ -121,7 +121,7 @@ Section "create product directory structure" SEC01
 
   CreateDirectory "$INSTDIR\Splash"
   SetOutPath "$INSTDIR\Splash"
-  File "@LHPBUILDER_INSTALLER_DIR_WIN@\mxlSplash.bmp"
+  File "@IPOSE_INSTALLER_DIR_WIN@\mxlSplash.bmp"
   CreateDirectory "$INSTDIR\Config"
   CreateDirectory "$INSTDIR\data"
   CreateDirectory "$INSTDIR\data\external"
@@ -129,10 +129,10 @@ Section "create product directory structure" SEC01
   CreateDirectory "$INSTDIR\Config\Dictionary"
   CreateDirectory "$INSTDIR\Layout"
   SetOutPath "$INSTDIR\Config\Dictionary"
-  File "@LHPBUILDER_INSTALLER_DIR_WIN@\dictionary.dic"
-  File "@LHPBUILDER_INSTALLER_DIR_WIN@\dicom3.dic"
+  File "@IPOSE_INSTALLER_DIR_WIN@\dictionary.dic"
+  File "@IPOSE_INSTALLER_DIR_WIN@\dicom3.dic"
   SetOutPath "$INSTDIR\Layout"
-  File "@LHPBUILDER_INSTALLER_DIR_WIN@\layout.mly"
+  File "@IPOSE_INSTALLER_DIR_WIN@\layout.mly"
              
   SetOutPath "$INSTDIR\bin"
 SectionEnd
